src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap");
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
}

body {
  background-color: rgba(var(--primary-container-color), 0.8);
}

.container {
  width: 100%;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: absolute;
  margin: 20px;
  width: auto;
}

.container a {
  text-decoration: none;
}

:root {
  --primary-text-color: #000;
  --secondary-text-color: #fff;
  --primary-container-color: 103, 103, 103;
  --secondary-container-color: 218, 218, 218; 
  
}

[data-theme='dark'] {
  --primary-text-color: #fff;
  --secondary-text-color: #000000;
  --primary-container-color: 218, 218, 218;
  --secondary-container-color: 29, 29, 29;  
}

.card-content {
  max-width: 70%;
  padding: 20px;
  display: flex;
}

.content {
  width: 80%; /* Adjust the width according to your preference */
   /* Set a maximum width to prevent it from becoming too wide */
  padding: 20px;
  margin: 30px;
  margin-top: 260px;
  overflow: hidden;
  display: flex;
  background-color: rgba(var(--secondary-container-color), 0.85);
  border-radius: 2em;
  transition: 0.3s;
  box-shadow: 0 3px 10px rgb(0 0 0 / 0.5);
  flex-wrap: wrap;
}

.content h2, .content h3, .content h1 {
    color: var(--primary-text-color);
    text-align: center;
    font-weight: 700;
    letter-spacing: 1px;
    padding: 20px;
    
}

.content li {
  color: var(--primary-text-color);
}

.content p {
    color: var(--primary-text-color);
    text-align: left;
    font-weight: 400;
    letter-spacing: 2px;
    margin-bottom: 10px;
}

.back-image {
  /* The image used */
  background-image: url("assets/ranier.png");

  min-height: 25em;

  /* Center and scale the image nicely */
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  
  /* Needed to position the navbar */
  position: relative;
}

